syntax = "proto3";

package user_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";


option go_package = "github.com/Genvekt/cli-chat/libraries/api/user/v1;user_v1";

service UserV1{
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetList(GetListRequest) returns (GetListResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum UserRole {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}

message UserInfo {
  string name = 1;
  string email = 2;
  UserRole role = 3;
}

message User {
  int64 id = 1;
  UserInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message CreateRequest {
  reserved 1, 2;
  string password = 3;
  string password_confirm = 4;
  reserved 5;
  UserInfo info = 6;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  reserved 1 to 6;
  User user = 7;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  optional UserRole role = 4;
}

message DeleteRequest {
  int64 id = 1;
}

message GetListRequest {
  GetListFilters filters = 1;
}

message GetListFilters {
  repeated string names = 1;
}

message GetListResponse {
  repeated User users = 1;
}